--- a/series.conf
+++ b/series.conf
@@ -13945,6 +13945,7 @@
 	patches.suse/ALSA-usb-audio-More-comprehensive-mixer-map-for-ASUS.patch
 	patches.suse/ALSA-hda-realtek-Add-a-quirk-for-HP-OMEN-15-8786-mut.patch
 	patches.suse/ALSA-hda-cirrus-support-for-iMac-12-1-model.patch
+	patches.suse/scsi-lpfc-Check-the-return-value-of-alloc_workqueue.patch
 	patches.suse/NTB-ntb_tool-uninitialized-heap-data-in-tool_fn_writ.patch
 	patches.suse/docs-i2c-i2c-sysfs-fix-hyperlinks.patch
 	patches.suse/posix-cpu-timers-Cleanup-CPU-timers-before-freeing-t.patch
