--- a/series.conf
+++ b/series.conf
@@ -14008,6 +14008,7 @@
 	patches.suse/scsi-lpfc-Fix-null-ndlp-ptr-dereference-in-abnormal-.patch
 	patches.suse/scsi-lpfc-Rework-MIB-Rx-Monitor-debug-info-logic.patch
 	patches.suse/scsi-lpfc-Add-warning-notification-period-to-CMF_SYN.patch
+	patches.suse/scsi-lpfc-Remove-SANDiags-related-code.patch
 
 	########################################################
 	# end of sorted patches
