--- a/series.conf
+++ b/series.conf
@@ -14003,6 +14003,9 @@
 	patches.suse/ethernet-rocker-fix-sleep-in-atomic-context-bug-in-n.patch
 	patches.suse/kcm-fix-strp_init-order-and-cleanup.patch
 
+	# mkp/scsi queue
+	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
+
 	########################################################
 	# end of sorted patches
 	########################################################
