--- a/series.conf
+++ b/series.conf
@@ -11378,6 +11378,7 @@
 	patches.suse/KVM-x86-Check-lapic_in_kernel-before-attempting-to-s.patch
 	patches.suse/KVM-x86-Avoid-theoretical-NULL-pointer-dereference-i.patch
 	patches.suse/KVM-x86-Forbid-VMM-to-set-SYNIC-STIMER-MSRs-when-Syn.patch
+	patches.suse/KVM-SVM-fix-panic-on-out-of-bounds-guest-IRQ.patch
 	patches.suse/KVM-SVM-Fix-kvm_cache_regs.h-inclusions-for-is_guest.patch
 	patches.suse/KVM-x86-svm-Clear-reserved-bits-written-to-PerfEvtSe.patch
 	patches.suse/KVM-x86-SVM-fix-avic-spec-based-definitions-again
