--- a/series.conf
+++ b/series.conf
@@ -11614,6 +11614,7 @@
 	patches.suse/cifs-destage-any-unwritten-data-to-the-server-before-calling-copych.patch
 	patches.suse/arm_pmu-Validate-single-group-leader-events.patch
 	patches.suse/arm64-mm-fix-p-d_leaf.patch
+	patches.suse/KVM-nVMX-Defer-APICv-updates-while-L2-is-active-unti.patch
 	patches.suse/KVM-x86-Pend-KVM_REQ_APICV_UPDATE-during-vCPU-creati.patch
 	patches.suse/KVM-selftests-Silence-compiler-warning-in-the-kvm_pa.patch
 	patches.suse/KVM-SVM-Simplify-and-harden-helper-to-flush-SEV-guest-page-s
