--- a/series.conf
+++ b/series.conf
@@ -13615,6 +13615,7 @@
 	patches.suse/USB-Follow-up-to-SPDX-GPL-2.0-identifiers-addition-r.patch
 	patches.suse/KVM-VMX-Print-VM-instruction-error-as-unsigned.patch
 	patches.suse/KVM-SVM-Don-t-BUG-if-userspace-injects-an-interrupt-.patch
+	patches.suse/KVM-SVM-Unwind-speculative-RIP-advancement-if-INTn-i.patch
 	patches.suse/selftests-kvm-set-rax-before-vmcall.patch
 	patches.suse/HID-wacom-Only-report-rotation-for-art-pen.patch
 	patches.suse/HID-wacom-Don-t-register-pad_input-for-touch-switch.patch
