--- a/series.conf
+++ b/series.conf
@@ -13616,6 +13616,7 @@
 	patches.suse/KVM-VMX-Print-VM-instruction-error-as-unsigned.patch
 	patches.suse/KVM-SVM-Don-t-BUG-if-userspace-injects-an-interrupt-.patch
 	patches.suse/KVM-SVM-Unwind-speculative-RIP-advancement-if-INTn-i.patch
+	patches.suse/KVM-nVMX-Snapshot-pre-VM-Enter-BNDCFGS-for-nested_ru.patch
 	patches.suse/selftests-kvm-set-rax-before-vmcall.patch
 	patches.suse/HID-wacom-Only-report-rotation-for-art-pen.patch
 	patches.suse/HID-wacom-Don-t-register-pad_input-for-touch-switch.patch
