--- a/series.conf
+++ b/series.conf
@@ -13618,6 +13618,7 @@
 	patches.suse/KVM-SVM-Unwind-speculative-RIP-advancement-if-INTn-i.patch
 	patches.suse/KVM-nVMX-Snapshot-pre-VM-Enter-BNDCFGS-for-nested_ru.patch
 	patches.suse/KVM-nVMX-Snapshot-pre-VM-Enter-DEBUGCTL-for-nested_r.patch
+	patches.suse/KVM-x86-Mark-TSS-busy-during-LTR-emulation-_after_-a.patch
 	patches.suse/selftests-kvm-set-rax-before-vmcall.patch
 	patches.suse/HID-wacom-Only-report-rotation-for-art-pen.patch
 	patches.suse/HID-wacom-Don-t-register-pad_input-for-touch-switch.patch
