--- a/series.conf
+++ b/series.conf
@@ -13619,6 +13619,7 @@
 	patches.suse/KVM-nVMX-Snapshot-pre-VM-Enter-BNDCFGS-for-nested_ru.patch
 	patches.suse/KVM-nVMX-Snapshot-pre-VM-Enter-DEBUGCTL-for-nested_r.patch
 	patches.suse/KVM-x86-Mark-TSS-busy-during-LTR-emulation-_after_-a.patch
+	patches.suse/KVM-x86-Set-error-code-to-segment-selector-on-LLDT-L.patch
 	patches.suse/selftests-kvm-set-rax-before-vmcall.patch
 	patches.suse/HID-wacom-Only-report-rotation-for-art-pen.patch
 	patches.suse/HID-wacom-Don-t-register-pad_input-for-touch-switch.patch
