--- a/series.conf
+++ b/series.conf
@@ -13622,6 +13622,7 @@
 	patches.suse/KVM-x86-Set-error-code-to-segment-selector-on-LLDT-L.patch
 	patches.suse/KVM-nVMX-Inject-UD-if-VMXON-is-attempted-with-incomp.patch
 	patches.suse/KVM-nVMX-Let-userspace-set-nVMX-MSR-to-any-_host_-su.patch
+	patches.suse/KVM-nVMX-Set-UMIP-bit-CR4_FIXED1-MSR-when-emulating-.patch
 	patches.suse/selftests-kvm-set-rax-before-vmcall.patch
 	patches.suse/HID-wacom-Only-report-rotation-for-art-pen.patch
 	patches.suse/HID-wacom-Don-t-register-pad_input-for-touch-switch.patch
