--- a/series.conf
+++ b/series.conf
@@ -13923,6 +13923,7 @@
 	patches.suse/Input-i8042-add-TUXEDO-devices-to-i8042-quirk-tables.patch
 	patches.suse/Input-i8042-add-additional-TUXEDO-devices-to-i8042-q.patch
 	patches.suse/KVM-x86-revalidate-steal-time-cache-if-MSR-value-cha.patch
+	patches.suse/KVM-X86-avoid-uninitialized-fault.async_page_fault-f.patch
 	patches.suse/ceph-use-correct-index-when-encoding-client-supported-features.patch
 	patches.suse/ceph-don-t-leak-snap_rwsem-in-handle_cap_grant.patch
 	patches.suse/ceph-don-t-truncate-file-in-atomic_open.patch
