--- a/series.conf
+++ b/series.conf
@@ -13954,6 +13954,7 @@
 	patches.suse/NTB-ntb_tool-uninitialized-heap-data-in-tool_fn_writ.patch
 	patches.suse/docs-i2c-i2c-sysfs-fix-hyperlinks.patch
 	patches.suse/posix-cpu-timers-Cleanup-CPU-timers-before-freeing-t.patch
+	patches.suse/xen-xenbus-fix-return-type-in-xenbus_file_read.patch
 	patches.suse/regulator-pca9450-Remove-restrictions-for-regulator-.patch
 	patches.suse/spi-meson-spicc-add-local-pow2-clock-ops-to-preserve.patch
 	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
