--- a/series.conf
+++ b/series.conf
@@ -13994,6 +13994,7 @@
 	patches.suse/arm64-Fix-match_list-for-erratum-1286807-on-Arm-Cort.patch
 	patches.suse/arm64-fix-rodata-full.patch
 	patches.suse/fbdev-fbcon-Properly-revert-changes-when-vc_resize-f.patch
+	patches.suse/xen-privcmd-fix-error-exit-of-privcmd_ioctl_dm_op.patch
 	patches.suse/ACPI-processor-Remove-freq-Qos-request-for-all-CPUs.patch
 	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
 	patches.suse/HID-steam-Prevent-NULL-pointer-dereference-in-steam_.patch
