--- a/series.conf
+++ b/series.conf
@@ -14011,6 +14011,7 @@
 	patches.suse/driver-core-Don-t-probe-devices-after-bus_type.match.patch
 	patches.suse/drm-i915-reg-Fix-spelling-mistake-Unsupport-Unsuppor.patch
 	patches.suse/drm-i915-display-avoid-warnings-when-registering-dua.patch
+	patches.suse/drm-msm-dsi-fix-the-inconsistent-indenting.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
