--- a/series.conf
+++ b/series.conf
@@ -14012,6 +14012,7 @@
 	patches.suse/drm-i915-reg-Fix-spelling-mistake-Unsupport-Unsuppor.patch
 	patches.suse/drm-i915-display-avoid-warnings-when-registering-dua.patch
 	patches.suse/drm-msm-dsi-fix-the-inconsistent-indenting.patch
+	patches.suse/drm-msm-dp-delete-DP_RECOVERED_CLOCK_OUT_EN-to-fix-t.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
