--- a/series.conf
+++ b/series.conf
@@ -14009,6 +14009,7 @@
 	patches.suse/ethernet-rocker-fix-sleep-in-atomic-context-bug-in-n.patch
 	patches.suse/kcm-fix-strp_init-order-and-cleanup.patch
 	patches.suse/driver-core-Don-t-probe-devices-after-bus_type.match.patch
+	patches.suse/drm-i915-reg-Fix-spelling-mistake-Unsupport-Unsuppor.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
