--- a/series.conf
+++ b/series.conf
@@ -14008,6 +14008,7 @@
 	patches.suse/ieee802154-adf7242-defer-destroy_workqueue-call.patch
 	patches.suse/ethernet-rocker-fix-sleep-in-atomic-context-bug-in-n.patch
 	patches.suse/kcm-fix-strp_init-order-and-cleanup.patch
+	patches.suse/driver-core-Don-t-probe-devices-after-bus_type.match.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
