--- a/series.conf
+++ b/series.conf
@@ -14014,6 +14014,7 @@
 	patches.suse/drm-msm-dsi-fix-the-inconsistent-indenting.patch
 	patches.suse/drm-msm-dp-delete-DP_RECOVERED_CLOCK_OUT_EN-to-fix-t.patch
 	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-msm8996_dsi.patch
+	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-SDM660.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
