--- a/series.conf
+++ b/series.conf
@@ -56900,6 +56900,7 @@
 	patches.suse/ASoC-tas2770-Allow-mono-streams.patch
 	patches.suse/ALSA-info-Fix-llseek-return-value-when-using-callbac.patch
 	patches.suse/mmc-pxamci-Fix-an-error-handling-path-in-pxamci_prob.patch
+	patches.suse/mmc-pxamci-Fix-another-error-handling-path-in-pxamci.patch
 	patches.suse/ata-libata-eh-Add-missing-command-name.patch
 	patches.suse/i2c-imx-Make-sure-to-unregister-adapter-on-remove.patch
 	patches.suse/tracing-probes-Have-kprobes-and-uprobes-use-COMM-too.patch
