--- a/series.conf
+++ b/series.conf
@@ -56737,6 +56737,7 @@
 	patches.suse/PCI-dwc-Disable-outbound-windows-only-for-controller.patch
 	patches.suse/PCI-dwc-Deallocate-EPC-memory-on-dw_pcie_ep_init-err.patch
 	patches.suse/PCI-dwc-Always-enable-CDM-check-if-snps-enable-cdm-c.patch
+	patches.suse/PCI-ACPI-Guard-ARM64-specific-mcfg_quirks.patch
 	patches.suse/PCI-qcom-Set-up-rev-2.1.0-PARF_PHY-before-enabling-c.patch
 	patches.suse/PCI-qcom-Power-on-PHY-before-IPQ8074-DBI-register-ac.patch
 	patches.suse/PCI-tegra194-Fix-PM-error-handling-in-tegra_pcie_con.patch
