--- a/series.conf
+++ b/series.conf
@@ -56868,6 +56868,7 @@
 	patches.suse/iommu-vt-d-avoid-invalid-memory-access-via-node_online-NUMA_NO_N
 	patches.suse/x86-olpc-fix-logical-not-is-only-applied-to-the-left.patch
 	patches.suse/serial-8250_dw-Store-LSR-into-lsr_saved_flags-in-dw8.patch
+	patches.suse/tty-serial-Fix-refcount-leak-bug-in-ucc_uart.c.patch
 	patches.suse/thermal-sysfs-Fix-cooling_device_stats_setup-error-c.patch
 	patches.suse/tools-thermal-Fix-possible-path-truncations.patch
 	patches.suse/watchdog-armada_37xx_wdt-check-the-return-value-of-d.patch
