--- a/series.conf
+++ b/series.conf
@@ -56711,6 +56711,7 @@
 	patches.suse/usb-host-Fix-refcount-leak-in-ehci_hcd_ppc_of_probe.patch
 	patches.suse/usb-ohci-nxp-Fix-refcount-leak-in-ohci_hcd_nxp_probe.patch
 	patches.suse/usb-xhci-tegra-Fix-error-check.patch
+	patches.suse/usb-gadget-uvc-call-uvc-uvcg_warn-on-completed-statu.patch
 	patches.suse/usb-host-xhci-use-snprintf-in-xhci_decode_trb.patch
 	patches.suse/gadgetfs-ep_io-wait-until-IRQ-finishes.patch
 	patches.suse/usb-gadget-udc-amd5536-depends-on-HAS_DMA.patch
