--- a/series.conf
+++ b/series.conf
@@ -56579,6 +56579,7 @@
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
 	patches.suse/wifi-iwlegacy-4965-fix-potential-off-by-one-overflow.patch
 	patches.suse/wifi-mac80211_hwsim-fix-race-condition-in-pending-pa.patch
+	patches.suse/wifi-mac80211_hwsim-add-back-erroneously-removed-cas.patch
 	patches.suse/vmxnet3-Record-queue-number-to-incoming-packets.patch
 	patches.suse/can-pch_can-do-not-report-txerr-and-rxerr-during-bus.patch
 	patches.suse/can-rcar_can-do-not-report-txerr-and-rxerr-during-bu.patch
