--- a/series.conf
+++ b/series.conf
@@ -56544,6 +56544,7 @@
 	patches.suse/gpio-pca953x-use-the-correct-range-when-do-regmap-sy.patch
 	patches.suse/gpio-pca953x-use-the-correct-register-address-when-r.patch
 	patches.suse/i2c-cadence-Change-large-transfer-count-reset-logic-.patch
+	patches.suse/spi-spi-rspi-Fix-PIO-fallback-on-RZ-platforms.patch
 	patches.suse/lkdtm-disable-return-thunks-in-rodata-c.patch
 	patches.suse/Bluetooth-L2CAP-Fix-use-after-free-caused-by-l2cap_c.patch
 	patches.suse/netfilter-nf_queue-do-not-allow-packet-truncation-be.patch
