--- a/series.conf
+++ b/series.conf
@@ -56918,6 +56918,7 @@
 	patches.suse/i2c-imx-Make-sure-to-unregister-adapter-on-remove.patch
 	patches.suse/tracing-probes-Have-kprobes-and-uprobes-use-COMM-too.patch
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
+	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
 	patches.suse/s390-mm-do-not-trigger-write-fault-when-vma-does-not-allow-VM_WRITE
 	patches.suse/ACPI-processor-Remove-freq-Qos-request-for-all-CPUs.patch
 	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
