--- a/series.conf
+++ b/series.conf
@@ -56937,6 +56937,7 @@
 	patches.suse/iio-adc-mcp3911-make-use-of-the-sign-bit.patch
 	patches.suse/iio-adc-mcp3911-use-correct-formula-for-AD-conversio.patch
 	patches.suse/misc-fastrpc-fix-memory-corruption-on-probe.patch
+	patches.suse/misc-fastrpc-fix-memory-corruption-on-open.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
