--- a/series.conf
+++ b/series.conf
@@ -56932,6 +56932,7 @@
 	patches.suse/usb-typec-altmodes-displayport-correct-pin-assignmen.patch
 	patches.suse/thunderbolt-Use-the-actual-buffer-in-tb_async_error.patch
 	patches.suse/usb-gadget-udc-xilinx-replace-memcpy-with-memcpy_toi.patch
+	patches.suse/usb-dwc2-fix-wrong-order-of-phy_power_on-and-phy_ini.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
