--- a/series.conf
+++ b/series.conf
@@ -56928,6 +56928,7 @@
 	patches.suse/wifi-cfg80211-debugfs-fix-return-type-in-ht40allow_m.patch
 	patches.suse/Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
 	patches.suse/ieee802154-adf7242-defer-destroy_workqueue-call.patch
+	patches.suse/platform-x86-pmc_atom-Fix-SLP_TYPx-bitfield-mask.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
