--- a/series.conf
+++ b/series.conf
@@ -56942,6 +56942,7 @@
 	patches.suse/drm-i915-reg-Fix-spelling-mistake-Unsupport-Unsuppor.patch
 	patches.suse/drm-msm-dsi-fix-the-inconsistent-indenting.patch
 	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-msm8996_dsi.patch
+	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-SDM660.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
