--- a/series.conf
+++ b/series.conf
@@ -56951,6 +56951,7 @@
 	patches.suse/serial-fsl_lpuart-RS485-RTS-polariy-is-inverse.patch
 	patches.suse/tty-serial-lpuart-disable-flow-control-while-waiting.patch
 	patches.suse/Input-rk805-pwrkey-fix-module-autoloading.patch
+	patches.suse/Input-iforce-wake-up-after-clearing-IFORCE_XMIT_RUNN.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
