--- a/series.conf
+++ b/series.conf
@@ -56943,6 +56943,7 @@
 	patches.suse/drm-msm-dsi-fix-the-inconsistent-indenting.patch
 	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-msm8996_dsi.patch
 	patches.suse/drm-msm-dsi-Fix-number-of-regulators-for-SDM660.patch
+	patches.suse/hwmon-gpio-fan-Fix-array-out-of-bounds-access.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
