--- a/series.conf
+++ b/series.conf
@@ -56950,6 +56950,7 @@
 	patches.suse/staging-rtl8712-fix-use-after-free-bugs.patch
 	patches.suse/serial-fsl_lpuart-RS485-RTS-polariy-is-inverse.patch
 	patches.suse/tty-serial-lpuart-disable-flow-control-while-waiting.patch
+	patches.suse/Input-rk805-pwrkey-fix-module-autoloading.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
