--- a/series.conf
+++ b/series.conf
@@ -56927,6 +56927,7 @@
 	patches.suse/wifi-mac80211-Don-t-finalize-CSA-in-IBSS-mode-if-sta.patch
 	patches.suse/wifi-cfg80211-debugfs-fix-return-type-in-ht40allow_m.patch
 	patches.suse/Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
+	patches.suse/ieee802154-adf7242-defer-destroy_workqueue-call.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
