--- a/series.conf
+++ b/series.conf
@@ -56925,6 +56925,7 @@
 	patches.suse/HID-steam-Prevent-NULL-pointer-dereference-in-steam_.patch
 	patches.suse/mm-rmap-Fix-anon_vma-degree-ambiguity-leading-to-double-reuse.patch
 	patches.suse/wifi-mac80211-Don-t-finalize-CSA-in-IBSS-mode-if-sta.patch
+	patches.suse/wifi-cfg80211-debugfs-fix-return-type-in-ht40allow_m.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
