--- a/series.conf
+++ b/series.conf
@@ -56939,6 +56939,7 @@
 	patches.suse/misc-fastrpc-fix-memory-corruption-on-probe.patch
 	patches.suse/misc-fastrpc-fix-memory-corruption-on-open.patch
 	patches.suse/driver-core-Don-t-probe-devices-after-bus_type.match.patch
+	patches.suse/drm-i915-reg-Fix-spelling-mistake-Unsupport-Unsuppor.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Fix-unsolicited-FLOGI-receive-handling-dur.patch
