--- a/series.conf
+++ b/series.conf
@@ -14133,6 +14133,7 @@
 	patches.suse/clk-core-Honor-CLK_OPS_PARENT_ENABLE-for-clk-gate-op.patch
 	patches.suse/clk-core-Fix-runtime-PM-sequence-in-clk_core_unprepa.patch
 	patches.suse/clk-bcm-rpi-Fix-error-handling-of-raspberrypi_fw_get.patch
+	patches.suse/clk-bcm-rpi-Prevent-out-of-bounds-access.patch
 	patches.suse/Revert-clk-core-Honor-CLK_OPS_PARENT_ENABLE-for-clk-.patch
 	patches.suse/staging-rtl8712-fix-use-after-free-bugs.patch
 	patches.suse/serial-fsl_lpuart-RS485-RTS-polariy-is-inverse.patch
