--- a/series.conf
+++ b/series.conf
@@ -14136,6 +14136,7 @@
 	patches.suse/clk-bcm-rpi-Prevent-out-of-bounds-access.patch
 	patches.suse/Revert-clk-core-Honor-CLK_OPS_PARENT_ENABLE-for-clk-.patch
 	patches.suse/staging-rtl8712-fix-use-after-free-bugs.patch
+	patches.suse/vt-Clear-selection-before-changing-the-font.patch
 	patches.suse/serial-fsl_lpuart-RS485-RTS-polariy-is-inverse.patch
 	patches.suse/tty-serial-lpuart-disable-flow-control-while-waiting.patch
 	patches.suse/tty-n_gsm-add-sanity-check-for-gsm-receive-in-gsm_re.patch
