--- a/series.conf
+++ b/series.conf
@@ -14086,6 +14086,7 @@
 	patches.suse/platform-x86-pmc_atom-Fix-SLP_TYPx-bitfield-mask.patch
 	patches.suse/musb-fix-USB_MUSB_TUSB6010-dependency.patch
 	patches.suse/usb-typec-tcpm-Return-ENOTSUPP-for-power-supply-prop.patch
+	patches.suse/usb-storage-Add-ignore-residue-quirk-for-NXP-PN7462A.patch
 	patches.suse/usb-dwc3-qcom-fix-use-after-free-on-runtime-PM-wakeu.patch
 	patches.suse/usb-dwc3-gadget-Avoid-duplicate-requests-to-enable-R.patch
 	patches.suse/usb-typec-altmodes-displayport-correct-pin-assignmen.patch
