--- a/series.conf
+++ b/series.conf
@@ -14089,6 +14089,7 @@
 	patches.suse/usb-storage-Add-ignore-residue-quirk-for-NXP-PN7462A.patch
 	patches.suse/usb-dwc3-qcom-fix-use-after-free-on-runtime-PM-wakeu.patch
 	patches.suse/usb-typec-intel_pmc_mux-Add-new-ACPI-ID-for-Meteor-L.patch
+	patches.suse/usb-dwc3-pci-Add-support-for-Intel-Raptor-Lake.patch
 	patches.suse/usb-dwc3-gadget-Avoid-duplicate-requests-to-enable-R.patch
 	patches.suse/usb-typec-altmodes-displayport-correct-pin-assignmen.patch
 	patches.suse/usb-gadget-f_uac2-fix-superspeed-transfer.patch
