--- a/series.conf
+++ b/series.conf
@@ -10192,6 +10192,7 @@
 	patches.suse/af_key-add-__GFP_ZERO-flag-for-compose_sadb_supporte.patch
 	patches.suse/net-handle-ARPHRD_PIMREG-in-dev_is_mac_header_xmit.patch
 	patches.suse/net-phy-mscc-Add-MODULE_FIRMWARE-macros.patch
+	patches.suse/bnx2x-fix-built-in-kernel-driver-load-failure.patch
 	patches.suse/net-bcmgenet-skip-invalid-partial-checksums.patch
 	patches.suse/net-mscc-ocelot-fix-backwards-compatibility-with-sin.patch
 	patches.suse/iavf-Fix-hang-during-reboot-shutdown.patch
