--- a/series.conf
+++ b/series.conf
@@ -46821,6 +46821,7 @@
 	patches.suse/s390-qeth-tolerate-error-when-querying-card-info
 	patches.suse/s390-qeth-improve-QUERY-CARD-INFO-processing
 	patches.suse/s390-qeth-set-static-link-info-during-initialization
+	patches.suse/s390-qeth-clean-up-default-cases-for-ethtool-link-mode
 	patches.suse/enetc-Fix-endianness-issues-for-enetc_qos.patch
 	patches.suse/ibmvnic-Introduce-indirect-subordinate-Command-Respo.patch
 	patches.suse/ibmvnic-Introduce-batched-RX-buffer-descriptor-trans.patch
