--- a/series.conf
+++ b/series.conf
@@ -56898,6 +56898,7 @@
 	patches.suse/ACPI-property-Return-type-of-acpi_add_nondev_subnode.patch
 	patches.suse/virtio_net-fix-memory-leak-inside-XPD_TX-with-mergea.patch
 	patches.suse/atm-idt77252-fix-use-after-free-bugs-caused-by-tst_t.patch
+	patches.suse/s390-qeth-cache-link_info-for-ethtool
 	patches.suse/Bluetooth-L2CAP-Fix-l2cap_global_chan_by_psm-regress.patch
 	patches.suse/Bluetooth-MGMT-Fixes-build-warnings-with-C-1.patch
 	patches.suse/geneve-fix-TOS-inheriting-for-ipv4.patch
