--- a/series.conf
+++ b/series.conf
@@ -46822,6 +46822,7 @@
 	patches.suse/s390-qeth-improve-QUERY-CARD-INFO-processing
 	patches.suse/s390-qeth-set-static-link-info-during-initialization
 	patches.suse/s390-qeth-clean-up-default-cases-for-ethtool-link-mode
+	patches.suse/s390-qeth-use-QUERY-OAT-for-initial-link-info
 	patches.suse/enetc-Fix-endianness-issues-for-enetc_qos.patch
 	patches.suse/ibmvnic-Introduce-indirect-subordinate-Command-Respo.patch
 	patches.suse/ibmvnic-Introduce-batched-RX-buffer-descriptor-trans.patch
