--- a/series.conf
+++ b/series.conf
@@ -14062,6 +14062,7 @@
 	patches.suse/fbdev-fb_pm2fb-Avoid-potential-divide-by-zero-error.patch
 	patches.suse/fbdev-fbcon-Properly-revert-changes-when-vc_resize-f.patch
 	patches.suse/xen-privcmd-fix-error-exit-of-privcmd_ioctl_dm_op.patch
+	patches.suse/s390-fix-double-free-of-GS-and-RI-CBs-on-fork-failure
 	patches.suse/s390-mm-do-not-trigger-write-fault-when-vma-does-not-allow-VM_WRITE
 	patches.suse/ACPI-processor-Remove-freq-Qos-request-for-all-CPUs.patch
 	patches.suse/asm-generic-sections-refactor-memory_intersects.patch
