--- a/series.conf
+++ b/series.conf
@@ -10882,6 +10882,7 @@
 	patches.suse/Bluetooth-call-hci_le_conn_failed-with-hdev-lock-in-.patch
 	patches.suse/Bluetooth-btmtksdio-Fix-kernel-oops-in-btmtksdio_int.patch
 	patches.suse/bnxt-use-the-devlink-instance-lock-to-protect-sriov.patch
+	patches.suse/devlink-add-explicitly-locked-flavor-of-the-rate-nod.patch
 	patches.suse/bnx2x-truncate-value-to-original-sizing.patch
 	patches.suse/bpf-Add-check_func_arg_reg_off-function.patch
 	patches.suse/bpf-Fix-PTR_TO_BTF_ID-var_off-check.patch
