--- a/series.conf
+++ b/series.conf
@@ -5790,6 +5790,7 @@
 	patches.suse/ethtool-push-the-rtnl_lock-into-dev_ethtool.patch
 	patches.suse/ethtool-handle-info-flash-data-copying-outside-rtnl_.patch
 	patches.suse/devlink-expose-get-put-functions.patch
+	patches.suse/ethtool-don-t-drop-the-rtnl_lock-half-way-thru-the-i.patch
 	patches.suse/net-smc-Introduce-tracepoint-for-fallback
 	patches.suse/net-smc-Introduce-tracepoints-for-tx-and-rx-msg
 	patches.suse/net-smc-Introduce-tracepoint-for-smcr-link-down
