--- a/series.conf
+++ b/series.conf
@@ -8488,6 +8488,7 @@
 	patches.suse/bnxt_en-enable-interrupt-sampling-on-5750X-for-DIM.patch
 	patches.suse/bnxt_en-Support-configurable-CQE-coalescing-mode.patch
 	patches.suse/bnxt_en-Support-CQE-coalescing-mode-in-ethtool.patch
+	patches.suse/bnxt_en-convert-to-xdp_do_flush.patch
 	patches.suse/Bluetooth-btusb-Add-one-more-Bluetooth-part-for-the-.patch
 	patches.suse/Bluetooth-btusb-Add-the-new-support-IDs-for-WCN6855.patch
 	patches.suse/Bluetooth-refactor-malicious-adv-data-check.patch
