--- a/series.conf
+++ b/series.conf
@@ -12251,6 +12251,7 @@
 	patches.suse/usbnet-smsc95xx-Forward-PHY-interrupts-to-PHY-driver.patch
 	patches.suse/bnxt_en-Update-firmware-interface-to-1.10.2.95.patch
 	patches.suse/bnxt_en-Configure-ptp-filters-during-bnxt-open.patch
+	patches.suse/bnxt_en-Enable-packet-timestamping-for-all-RX-packet.patch
 	patches.suse/octeontx2-pf-Remove-unnecessary-synchronize_irq-befo.patch
 	patches.suse/net-phy-micrel-Allow-probing-without-.driver_data.patch
 	patches.suse/octeontx2-pf-Add-support-for-adaptive-interrupt-coal.patch
