--- a/series.conf
+++ b/series.conf
@@ -8884,6 +8884,7 @@
 	patches.suse/RDMA-cma-Remove-open-coding-of-overflow-checking-for.patch
 	patches.suse/RDMA-rtrs-clt-Fix-the-initial-value-of-min_latency.patch
 	patches.suse/RDMA-bnxt_re-Remove-dynamic-pkey-table.patch
+	patches.suse/RDMA-bnxt_re-Use-bitmap_zalloc-when-applicable.patch
 	patches.suse/RDMA-hns-Modify-the-mapping-attribute-of-doorbell-to.patch
 	patches.suse/RDMA-uverbs-Remove-the-unnecessary-assignment.patch
 	patches.suse/RDMA-rxe-Remove-the-unnecessary-variable.patch
