--- a/series.conf
+++ b/series.conf
@@ -8484,6 +8484,7 @@
 	patches.suse/ath11k-Fix-napi-related-hang.patch
 	patches.suse/rtw89-8852a-correct-bit-definition-of-dfs_en.patch
 	patches.suse/bnxt_en-Add-event-handler-for-PAUSE-Storm-event.patch
+	patches.suse/bnxt_en-Log-error-report-for-dropped-doorbell.patch
 	patches.suse/Bluetooth-btusb-Add-one-more-Bluetooth-part-for-the-.patch
 	patches.suse/Bluetooth-btusb-Add-the-new-support-IDs-for-WCN6855.patch
 	patches.suse/Bluetooth-refactor-malicious-adv-data-check.patch
