--- a/series.conf
+++ b/series.conf
@@ -13265,6 +13265,7 @@
 	patches.suse/bnxt_en-Fix-bnxt_reinit_after_abort-code-path.patch
 	patches.suse/bnxt_en-fix-livepatch-query.patch
 	patches.suse/bnxt_en-Fix-and-simplify-XDP-transmit-path.patch
+	patches.suse/bnxt_en-Fix-bnxt_refclk_read.patch
 	patches.suse/sysctl-Fix-data-races-in-proc_dou8vec_minmax.patch
 	patches.suse/sysctl-Fix-data-races-in-proc_dointvec_ms_jiffies.patch
 	patches.suse/raw-Fix-a-data-race-around-sysctl_raw_l3mdev_accept.patch
