--- a/series.conf
+++ b/series.conf
@@ -14088,6 +14088,7 @@
 	patches.suse/bnxt_en-Use-PAGE_SIZE-to-init-buffer-when-multi-buff.patch
 	patches.suse/bnxt_en-set-missing-reload-flag-in-devlink-features.patch
 	patches.suse/bnxt_en-fix-NQ-resource-accounting-during-vf-creatio.patch
+	patches.suse/bnxt_en-fix-LRO-GRO_HW-features-in-ndo_fix_features-.patch
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
 	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
 	patches.suse/arm64-Fix-match_list-for-erratum-1286807-on-Arm-Cort.patch
