--- a/series.conf
+++ b/series.conf
@@ -5787,6 +5787,7 @@
 	patches.suse/msft-hv-2474-net-mana-Report-OS-info-to-the-PF-driver.patch
 	patches.suse/msft-hv-2475-net-mana-Improve-the-HWC-error-handling.patch
 	patches.suse/msft-hv-2476-net-mana-Support-hibernation-and-kexec.patch
+	patches.suse/ethtool-push-the-rtnl_lock-into-dev_ethtool.patch
 	patches.suse/net-smc-Introduce-tracepoint-for-fallback
 	patches.suse/net-smc-Introduce-tracepoints-for-tx-and-rx-msg
 	patches.suse/net-smc-Introduce-tracepoint-for-smcr-link-down
