--- a/series.conf
+++ b/series.conf
@@ -14085,6 +14085,7 @@
 	patches.suse/r8152-fix-the-RX-FIFO-settings-when-suspending.patch
 	patches.suse/nfc-pn533-Fix-use-after-free-bugs-caused-by-pn532_cm.patch
 	patches.suse/net-phy-Don-t-WARN-for-PHY_READY-state-in-mdio_bus_p.patch
+	patches.suse/bnxt_en-Use-PAGE_SIZE-to-init-buffer-when-multi-buff.patch
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
 	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
 	patches.suse/arm64-Fix-match_list-for-erratum-1286807-on-Arm-Cort.patch
