--- a/series.conf
+++ b/series.conf
@@ -10656,6 +10656,7 @@
 	patches.suse/bpf-Fix-UAF-due-to-race-between-btf_try_get_module-a.patch
 	patches.suse/net-skbuff-add-size-metadata-to-skb_shared_info-for-.patch
 	patches.suse/xdp-introduce-flags-field-in-xdp_buff-xdp_frame.patch
+	patches.suse/net-xdp-add-xdp_update_skb_shared_info-utility-routi.patch
 	patches.suse/ionic-fix-type-complaint-in-ionic_dev_cmd_clean.patch
 	patches.suse/ionic-start-watchdog-after-all-is-setup.patch
 	patches.suse/ionic-Don-t-send-reset-commands-if-FW-isn-t-running.patch
